--- a/test/index.html
+++ b/test/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Menubar</title>
+        <title>Pie Progress</title>
         <meta charset="utf-8"/>
         <link rel="stylesheet" href="styles.css">
-        <link rel="stylesheet" href="themes/darktheme.css">
+        <link rel="stylesheet" href="themes/standard.css">
     </head>
 
-    <body>
+    <body class="standard">
         <div class="root">
-            Halkko
+            <span>Hallo</span>
+            <pie-progress></pie-progress>
+            <span>Progress</span>
         </div>
         
         <script type="module" src="index.js"></script>
