--- a/test/index.html
+++ b/test/index.html
@@ -10,7 +10,7 @@
     <body class="standard">
         <div class="root">
             <span>Hallo</span>
-            <pie-progress></pie-progress>
+            <pie-progress id="progress"></pie-progress>
             <span>Progress</span>
         </div>
         
